--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "btoa": "^1.1.2",
     "kinto-http": "^1.0.0",
     "react": "^15.0.1",
+    "react-bootstrap": "^0.29.5",
     "react-chartist": "^0.10.2",
     "react-dom": "^15.0.1",
     "react-redux": "^4.0.0",
