--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "atob": "^2.0.3",
+    "bootstrap": "^3.3.6",
     "btoa": "^1.1.2",
     "kinto-http": "^1.0.0",
     "react": "^15.0.1",
