--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "atob": "^2.0.3",
     "btoa": "^1.1.2",
+    "kinto": "^3.1.0",
     "react": "^15.0.1",
     "react-bootstrap": "^0.29.5",
     "react-chartist": "^0.10.2",
